// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox should render the checkbox 1`] = `
<label
  className="cn-field__opt"
  data-component="CheckBox"
  htmlFor="ck1"
>
  <input
    checked={false}
    className="cn-field__checkradio"
    disabled={false}
    id="ck1"
    onChange={[Function]}
    type="checkbox"
    value="ck1_value"
  />
  <span
    className="cn-field__text"
  >
    Check me!
  </span>
</label>
`;

exports[`checkbox should render the checkbox with checked 1`] = `
<label
  className="cn-field__opt cn-field__opt--is-checked"
  data-component="CheckBox"
  htmlFor="ck1"
>
  <input
    checked={true}
    className="cn-field__checkradio"
    disabled={false}
    id="ck1"
    onChange={[Function]}
    type="checkbox"
    value="ck1_value"
  />
  <span
    className="cn-field__text"
  >
    Check me!
  </span>
</label>
`;

exports[`checkbox should render the checkbox with classname 1`] = `
<label
  className="cn-field__opt my-class"
  data-component="CheckBox"
  htmlFor="ck1"
>
  <input
    checked={false}
    className="cn-field__checkradio"
    disabled={false}
    id="ck1"
    onChange={[Function]}
    type="checkbox"
    value="ck1_value"
  />
  <span
    className="cn-field__text"
  >
    Check me!
  </span>
</label>
`;

exports[`checkbox should render the checkbox with disabled 1`] = `
<label
  className="cn-field__opt"
  data-component="CheckBox"
  htmlFor="ck1"
>
  <input
    checked={false}
    className="cn-field__checkradio"
    disabled={true}
    id="ck1"
    onChange={[Function]}
    type="checkbox"
    value="ck1_value"
  />
  <span
    className="cn-field__text"
  >
    Check me!
  </span>
</label>
`;

exports[`checkbox should render the checkbox with no label 1`] = `
<label
  className="cn-field__opt"
  data-component="CheckBox"
  htmlFor="ck1"
>
  <input
    checked={false}
    className="cn-field__checkradio"
    disabled={false}
    id="ck1"
    onChange={[Function]}
    type="checkbox"
    value="ck1_value"
  />
  <span
    className="cn-field__text a11y"
  >
    Check me!
  </span>
</label>
`;
